# simple_ans

./: CMakeLists.txt  README.md  pyproject.toml  simple_ans_bind.cpp
.github/workflows/: benchmark.yml  build-test.yml  publish.yml
benchmark-results/: benchmark.json  benchmark2.json
devel/: benchmark.py  benchmark_ans_only.py  benchmark_ans_only_new.py  thinking.md
doc/: technical_overview.md
simple_ans/: __init__.py  encode_decode.py
simple_ans/cpp/: simple_ans.hpp  utils.hpp
simple_ans/pure_python/: py_encode_decode.py
tests/: test_simple_ans.py
